<?xml version="1.0"?>
<package format="2">

  <name>common_msgs_srvs</name>
  <version>0.0.0</version>
  <description>The common_msgs_srvs package</description>

  <maintainer email="leopak2000@gmail.com">leopak2000</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
